--- a/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
+++ b/articles/2012-03-05-FM-HYMITATOR/biblioFM.bib
@@ -70,7 +70,7 @@
 @article{acef09,
 	author =	{Andr{\'e}, {\'E}. and Chatain, T. and Encrenaz, E. and Fribourg, L.},
 	DOI =	{10.1142/S0129054109006905},
-	journal =	{IJFCS},
+	journal =	{International Journal of Foundations of Computer Science},
 	number =	{5},
 	pages =	{819-836},
 	publisher =	{World Scientific},
@@ -102,13 +102,13 @@
 }
 
 
-@misc{afks12,
+@misc{afks,
   	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent K\"uhne, Ulrich and Soulat, Romain},
-  	title =	{{IMITATOR} 2.5: A Tool for Analyzing Robustness in Scheduling Problems},
-  	year =	{2012},
-  	note = {Submitted. Available on \url{www.lsv.ens-cachan.fr/Software/imitator/IMITATOR2.5.pdf}}
+  	title =	{{IMITATOR} 2.5},
+  	note = {Available at \url{www.lsv.ens-cachan.fr/Software/imitator/}}
 }
-
+: A Tool for Analyzing Robustness in Scheduling Problems
+  	year =	{2012},
 
 
 @inproceedings{afs09,
@@ -136,8 +136,6 @@
 @inproceedings{AFS12,
   	author =	{Andr{\'e}, {\'E}tienne and Fribourg, Laurent and Soulat, Romain},
   	booktitle =	{NFM'12},
-  	editor =	{Goodloe, Alwyn and Person, Suzette},
-  	note =	{To appear},
   	pages =	{100-105},
   	publisher =	{Springer},
   	series =	{LNCS},
@@ -146,6 +144,7 @@
   	volume =	{7226},
   	year =	{2012},
 }
+  	editor =	{Goodloe, Alwyn and Person, Suzette},
   	address =	{Norfolk, Virginia, USA},
   	month =	apr,
   	series =	{Lecture Notes in Computer Science},
@@ -473,10 +472,9 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
 @article{ADI2006,
  author = {Alur, Rajeev and Dang, Thao and Ivan\v{c}i\'{c}, Franjo},
  title = {Predicate abstraction for reachability analysis of hybrid systems},
- journal = {ACM Trans. Embed. Comput. Syst.},
+ journal = {ACM Transactions in Embedded Computing Systems},
  volume = {5},
  issue = {1},
- month = {February},
  year = {2006},
  issn = {1539-9087},
  pages = {152--199},
@@ -488,7 +486,10 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
  address = {New York, NY, USA},
  keywords = {Reachability analysis, hybrid systems, predicate abstraction},
 } 
+ACM Trans. Embed. Comput. Syst.
+ month = {February},
 
+ 
 @inproceedings{adss07,
   	address =	{Braga, Portugal},
   	author =	{D'Aprile, D. and Donatelli, S. and Sangnier, A. and Sproston, J.},
@@ -558,10 +559,12 @@ Proceedings of the 17th International Colloquium on Automata, Languages and Prog
 @INPROCEEDINGS{FI2004,
     author = {A. Fehnker and F. Ivancic},
     title = {Benchmarks for Hybrid Systems Verification},
-    booktitle = {HSCC},
+    booktitle = {HSCC'04},
     year = {2004},
     pages = {326--341},
-    publisher = {Springer}
+    publisher = {Springer},
+	series    = {LNCS},
+	volume    = {2993},
 }
 
 
@@ -1498,6 +1501,17 @@ Proceedings of the 9th International Conference on Concurrency Theory
   ee        = {http://springerlink.metapress.com/openurl.asp?genre=article{\&}issn=0302-9743{\&}volume=3414{\&}spage=258},
 	crossref  = {DBLP:conf/hybrid/2005},
 
+@article{Frehse08,
+  author    = {Goran Frehse},
+  title     = {{PHAVer}: Algorithmic Verification of Hybrid Systems Past {HyTech}},
+  journal   = {Software Tools for Technology Transfer},
+  volume    = {10},
+  number    = {3},
+  year      = {2008},
+  pages     = {263-279},
+  ee        = {http://dx.doi.org/10.1007/s10009-007-0062-x},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
 
 
 
@@ -1595,7 +1609,7 @@ Proceedings of the 9th International Conference on Concurrency Theory
 
 @article{hhw97,
 	author = {T. A. Henzinger and P. H. Ho and H. Wong-Toi},
-	title = {HyTech: A Model Checker for Hybrid Systems},
+	title = {{HyTech}: A Model Checker for Hybrid Systems},
 	journal = {Software Tools for Technology Transfer},
 	year = {1997},
 	volume = {1},
